<resources>
    <string name="app_name">Face Off</string>
    <string name="app_title">Face Off!</string>
    <string name="application_id">578362453617</string>
    <string name="start_single">Single Player</string>
    <string name="start_multi">Multiplayer</string>
    <string name="easy_mode">Easy</string>
    <string name="med_mode">Medium</string>
    <string name="hard_mode">Hard</string>
    <string name="local_mode">Local</string>
    <string name="online_mode">Online (Coming soon!)</string>
    <string name="multiplayer_title">Select a Game Type</string>
    <string name="difficulty_title">Select a Difficulty</string>
    <string name="title_activity_single_player">SinglePlayer</string>
    <string name="dummy_buttaon">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_multi_player">MultiPlayer</string>
    <string name="title_activity_multi_game">MultiGame</string>
    <string name="title_activity_local_game">LocalGame</string>
    <string name="title_activity_game">Game</string>
    <string name="title_activity_multiplayer">Multiplayer</string>
    <string name="button_confirm">Confirm</string>
    <string name="info_box_blue">Blue\'s Turn</string>
    <string name="info_box_red">Red\'s Turn</string>
    <string name="winner_blue">Blue Wins! (tap to play again)</string>
    <string name="winner_red">Red Wins! (tap to play again)</string>
    <string name="tie_game">It\'s a tie! (tap to play again)</string>
    <string name="title_activity_game2">Game2</string>
    <string name="tutorial0">Hello! Welcome to Face Off! -
        This is a tutorial that will help you get - started&#8230; (Tap anywhere to continue)</string>
    <string name="tutorial1">Face Off is played on a 4D cube, which - has 24 faces&#8230; - \n</string>
    <string name="tutorial2">Your goal is to claim 4 points on a face - before your opponent! -
        An example is shown above&#8230;</string>
    <string name="tutorial3">Here is another example of how you - could win&#8230; - \n </string>
    <string name="tutorial4">And another!&#8230; - \n - \n</string>
    <string name="tutorial5">Now let\'s play! - Tap the highlighted point&#8230; - \n</string>
    <string name="tutorial6">Nice job! Keep going&#8230; - \n - \n </string>
    <string name="tutorial7">Almost there&#8230; - \n - \n </string>
    <string name="tutorial8">Sometimes your opponent might - \n block you&#8230; - \n </string>
    <string name="tutorial9">Luckily, there are other options!&#8230; - \n - \n </string>
    <string name="tutorial10">Place the last dot to win!&#8230; - \n - \n </string>
    <string name="tutorial11">Nice job! - You\'re a Face Off expert now! - \n </string>
    <string name="follow_directions">You\'re not an expert yet! - Tap the highlighted point&#8230; - \n </string>
    <string name="achievements_title">Game Stats</string>
    <string name="stats_title">Level [win - loss - draw]</string>
    <string name="fastest_title">AI Difficulty Level - Fastest Win (Moves)</string>
    <string name="settings_title">Settings</string>
    <string name="contact_label">Contact Me</string>
    <string name="contact_description">For requests, issues, or questions</string>
    <string name="music_label">Music</string>
    <string name="reset_stats">Reset Stats</string>
    <string name="replay_tutorial">Play Tutorial</string>
    <string name="acknowledgements_title">Acknowledgements</string>
    <string name="music_acknowledge">Music: "Perth 2" from parachutemusic</string>
    <string name="cook_acknowledge">Game Concept: Dr. Diane Cook</string>

    <string name="game_title">Button Clicker 2000!</string>
    <string name="game_blurb">A sample game that tests your ability to click a button. Can you click faster than your friends? Only one way to find out! To play this game with friends, you must sign in with Google.</string>
    <string name="single_player">Single Player</string>
    <string name="single_player_explanation">Get some practice!</string>
    <string name="quick_game">Quick game</string>
    <string name="invite_players">Invite friends</string>
    <string name="see_invitations">See invitations</string>
    <string name="quick_game_explanation">Challenge a random opponent.</string>
    <string name="invite_players_explanation">Invite friends to play a game.</string>
    <string name="see_invitations_explanation">See who is inviting you right now.</string>
    <string name="inv_popup_text">Incoming invitation!</string>
    <string name="accept_popup_invite">Accept!</string>
    <string name="sign_out">Sign Out</string>
    <string name="please_wait">Please wait&#8230;</string>
    <string name="instructions">Click the button as fast as you can!</string>
    <string name="game_problem">An error occurred while starting the game. Please try again.</string>
    <string name="click_me">Click me!</string>
    <string name="is_inviting_you">is challenging you to a game!</string>
    <string name="signin_other_error">There was an issue with sign in. Please try again later.</string>
    <string name="status_exception_error">%1$s (status %2$d). %3$s.</string>

    <string name="status_multiplayer_error_not_trusted_tester">Anyone you invite must be a trusted tester</string>
    <string name="match_error_already_rematched">This rematch has already been started!</string>
    <string name="client_reconnect_required">Games client reconnect required</string>
    <string name="network_error_operation_failed">Network error: Operation failed</string>
    <string name="internal_error">Internal error</string>
    <string name="unexpected_status">Unexpected status: %1$s</string>
    <string name="match_error_inactive_match">This match is inactive.</string>
    <string name='match_error_locally_modified'>This match has locally-modified data.  This operation cannot be performed until the match is sent to the server.</string>
    <string name="score_label">%1$s - Me</string>
</resources>
