<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="10dp"
    android:background="#000000"
    tools:context="nettleton.sam.faceoffv2.Settings">

    <TextView android:id="@+id/settings_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_gravity="top"
        android:layout_alignParentTop="true"
        android:text="@string/settings_title"
        android:textColor="#f44141"
        android:textSize="40sp"
        android:textStyle="bold"
        android:fontFamily="sans-serif-condensed"/>

    <View android:id="@+id/settings_separator"
        android:layout_gravity="bottom"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_below="@id/settings_title"/>

    <TextView android:id="@+id/contact_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/settings_separator"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/contact_label"
        android:textColor="#42aaf4"
        android:textSize="22sp"
        android:fontFamily="sans-serif-condensed"/>

    <TextView android:id="@+id/contact_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/contact_label"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/contact_description"
        android:textColor="#42aaf4"
        android:gravity="center"
        android:textSize="14sp"
        android:fontFamily="sans-serif-condensed"/>

    <!--<TextView android:id="@+id/music_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/contact_description"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_gravity="center_vertical"
        android:text="@string/music_label"
        android:textColor="#42aaf4"
        android:gravity="center"
        android:textSize="22sp"
        android:fontFamily="sans-serif-condensed"/>

    <Switch android:id="@+id/music_change"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/contact_description"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />-->

    <View android:id="@+id/settings_separator1"
        android:layout_gravity="bottom"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@id/contact_description"/>

    <Button android:id="@+id/tutorial_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/settings_separator1"
        android:layout_gravity="center_horizontal"
        android:padding="20dp"
        android:text="@string/replay_tutorial"
        android:textColor="#42aaf4"
        android:textSize="18sp"
        android:textAllCaps="false"
        android:fontFamily="sans-serif-condensed"/>

    <Button android:id="@+id/stats_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tutorial_button"
        android:layout_gravity="center_horizontal"
        android:padding="20dp"
        android:text="@string/reset_stats"
        android:textColor="#42aaf4"
        android:textSize="18sp"
        android:textAllCaps="false"
        android:fontFamily="sans-serif-condensed"/>

    <View android:id="@+id/settings_separator2"
        android:layout_gravity="bottom"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@id/stats_button"/>

    <TextView android:id="@+id/acknowledgements_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/settings_separator2"
        android:text="@string/acknowledgements_title"
        android:textColor="#f44141"
        android:textSize="22sp"
        android:textStyle="bold"
        android:fontFamily="sans-serif-condensed"/>

    <TextView android:id="@+id/cook_acknowledge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/acknowledgements_title"
        android:layout_gravity="center_vertical"
        android:text="@string/cook_acknowledge"
        android:textColor="#42aaf4"
        android:gravity="center"
        android:textSize="18sp"
        android:fontFamily="sans-serif-condensed"/>

    <TextView android:id="@+id/music_acknowledge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/cook_acknowledge"
        android:layout_gravity="center_vertical"
        android:text="@string/music_acknowledge"
        android:textColor="#42aaf4"
        android:gravity="center"
        android:textSize="18sp"
        android:fontFamily="sans-serif-condensed"/>

    <View
        android:layout_gravity="bottom"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
</RelativeLayout>
